[gd_scene load_steps=15 format=3 uid="uid://cw31mc8rmgi4g"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_7tk1n"]
[ext_resource type="PackedScene" uid="uid://cx068j6jtr15a" path="res://scenes/player.tscn" id="2_8b0qv"]
[ext_resource type="PackedScene" uid="uid://d2h7ojqlk1xv0" path="res://scenes/game_over.tscn" id="2_qvirj"]
[ext_resource type="Texture2D" uid="uid://c6fb72wwvk1kl" path="res://assets/images/pollution.png" id="3_6d3k8"]
[ext_resource type="PackedScene" uid="uid://cycpjc1x4aegn" path="res://scenes/platform.tscn" id="3_atn6h"]
[ext_resource type="Script" path="res://scripts/platforms.gd" id="3_qloub"]
[ext_resource type="Texture2D" uid="uid://0jukf5385cgu" path="res://assets/images/arrow.png" id="4_2a8c4"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="6_l30ci"]
[ext_resource type="AudioStream" uid="uid://bu68b7q3wgfll" path="res://assets/audio/Soft Hearted.mp3" id="7_yp2rr"]

[sub_resource type="Animation" id="Animation_kbpsq"]
resource_name = "in"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("game_over:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(720, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g7p3j"]
_data = {
"in": SubResource("Animation_kbpsq")
}

[sub_resource type="Animation" id="Animation_htsha"]
resource_name = "move"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(334, 581), Vector2(334, -126)]
}

[sub_resource type="Animation" id="Animation_2wdb2"]
resource_name = "shrink"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fthoa"]
_data = {
"move": SubResource("Animation_htsha"),
"shrink": SubResource("Animation_2wdb2")
}

[node name="main" type="Node2D"]
script = ExtResource("1_7tk1n")

[node name="ui" type="CanvasLayer" parent="."]
process_mode = 3

[node name="score" type="Label" parent="ui"]
offset_right = 40.0
offset_bottom = 23.0
text = "Score: 0"

[node name="objects" type="Label" parent="ui"]
offset_top = 37.0
offset_right = 40.0
offset_bottom = 63.0
text = "sc"

[node name="game_over" parent="ui" instance=ExtResource("2_qvirj")]
visible = false
offset_left = 720.0
offset_right = 720.0

[node name="anim" type="Control" parent="ui"]
layout_mode = 3
anchors_preset = 0

[node name="game_over_anim_player" type="AnimationPlayer" parent="ui/anim"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_g7p3j")
}

[node name="player_move_away" type="AnimationPlayer" parent="ui/anim"]
libraries = {
"": SubResource("AnimationLibrary_fthoa")
}

[node name="scores" type="Control" parent="ui"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="score_containers" type="VBoxContainer" parent="ui/scores"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.122202, 0.122202)

[node name="pollution" type="HSplitContainer" parent="ui/scores/score_containers"]
layout_mode = 2

[node name="pollution" type="TextureRect" parent="ui/scores/score_containers/pollution"]
layout_mode = 2
texture = ExtResource("3_6d3k8")
expand_mode = 2

[node name="label" type="Label" parent="ui/scores/score_containers/pollution"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 286
text = "amount"

[node name="arrow" type="HSplitContainer" parent="ui/scores/score_containers"]
layout_mode = 2

[node name="arrow" type="TextureRect" parent="ui/scores/score_containers/arrow"]
layout_mode = 2
texture = ExtResource("4_2a8c4")
expand_mode = 3

[node name="label" type="Label" parent="ui/scores/score_containers/arrow"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 286
text = "amount"

[node name="notifs" type="Control" parent="ui"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="music" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("7_yp2rr")
autoplay = true
max_distance = 3.45345e+16

[node name="player" parent="." instance=ExtResource("2_8b0qv")]
position = Vector2(334, 581)

[node name="platforms" type="Node2D" parent="."]
script = ExtResource("3_qloub")

[node name="platform" parent="platforms" instance=ExtResource("3_atn6h")]
position = Vector2(221, 1122)

[node name="platform2" parent="platforms" instance=ExtResource("3_atn6h")]
position = Vector2(221, 867)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="camera" type="Camera2D" parent="."]
position = Vector2(352, 661)
script = ExtResource("6_l30ci")

[node name="deletion_timer" type="Timer" parent="."]
wait_time = 1.523
autostart = true

[connection signal="play_button_pressed" from="ui/game_over" to="." method="_on_game_over_play_button_pressed"]
